# python-interview-test

./: test1.py  test2.py
test2_1/: package.xml  setup.cfg  setup.py
test2_1/test2_1/: pub_node.py  sub_node.py
test2_2/: package.xml  setup.cfg  setup.py
test2_2/test2_2/: cli_node.py  ser_node.py
visualization_tutorials/interactive_marker_tutorials/: CMakeLists.txt
visualization_tutorials/interactive_marker_tutorials/src/: basic_controls.cpp  cube.cpp  pong.cpp  selection.cpp
visualization_tutorials/librviz_tutorial/: CMakeLists.txt
visualization_tutorials/rviz_plugin_tutorials/: CMakeLists.txt
visualization_tutorials/rviz_plugin_tutorials/src/: imu_display.cpp  plant_flag_tool.hpp  teleop_panel.cpp  teleop_panel.hpp
visualization_tutorials/visualization_marker_tutorials/: CMakeLists.txt
